hugo/deployment.yaml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: www
    namespace: dolittle
  spec:
    template:
      metadata:
        labels:
          app: www
          name: www
      spec:
        containers:
        - name: www
          image: dolittle/www
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: www
    namespace: dolittle
    labels:
      app: www
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: www-port
      protocol: TCP
    selector:
      app: www
      name: www
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  namespace: dolittle
spec:
  rules:
  - host: www.dolittle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: www
          servicePort: 80
